--- a/Module_01_Introduction/Module_01_excercise_level_1.ipynb
+++ b/Module_01_Introduction/Module_01_excercise_level_1.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note:** As the assignment stated, these tasks should first be executed in an interactive shell. Therefore, I ran them in PowerShell before implementing them in this notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Check the python version you are using."
    ]
   },
