--- a/Module_05_Lists_Tuples_and_Sets/Module_05_list_excercise.ipynb
+++ b/Module_05_Lists_Tuples_and_Sets/Module_05_list_excercise.ipynb
@@ -713,21 +713,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Sort the list and find the min and max age.\n",
+    "## 1. The following is a list of 10 students ages.\n",
+    "\n",
     "``` bash\n",
     " ages =[19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
-    " ```\n",
-    "- ages.sort()\n",
-    "- min_age = min(ages)\n",
-    "- max_age = max(ages)\n",
-    "- print(\"Sorted ages:\", ages)\n",
-    "- print(\"Min age:\", min_age)\n",
-    "- print(\"Max age:\", max_age)\n"
+    " ```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Sort the list and find the min and max age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +753,6 @@
     }
    ],
    "source": [
-    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
     "\n",
     "ages.sort()\n",
     "min_age = min(ages)\n",
@@ -750,6 +761,161 @@
     "print(\"Min age:\", min_age)\n",
     "print(\"Max age:\", max_age)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Add the min age and the max age again to the list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated ages: [19, 19, 20, 22, 24, 24, 24, 25, 25, 26, 19, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages.extend([min_age, max_age])\n",
+    "print(\"Updated ages:\", ages)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Find the median age (one middle item or two middle items divided by two)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median age: 24.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages.sort() # sorted the age list.\n",
+    "n = len(ages)\n",
+    "if n % 2 == 0:\n",
+    "    median_age = (ages[n // 2 - 1] + ages[n // 2]) / 2\n",
+    "else:\n",
+    "    median_age = ages[n // 2]\n",
+    "print(\"Median age:\", median_age)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Find the average age (sum of all items divided by their number )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average age = 22.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_age = sum(ages) / len(ages)\n",
+    "print(\"Average age =\", average_age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Find the range of the ages (max minus min)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age range is ; 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "range = max_age - min_age\n",
+    "print(f\"Age range is ; {range}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Compare the value of (min - average) and (max - average), use abs() method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min - Average: 3.75\n",
+      "Max - Average: 3.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_diff = abs(min_age - average_age)\n",
+    "max_diff = abs(max_age - average_age)\n",
+    "print(\"Min - Average:\", min_diff)\n",
+    "print(\"Max - Average:\", max_diff)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted ages: [19, 19, 20, 22, 24, 24, 24, 25, 25, 26]\n",
+      "Min age: 19\n",
+      "Max age: 26\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
