--- a/Module_05_Lists_Tuples_and_Sets/Module_05_Tuple_excercise.ipynb
+++ b/Module_05_Lists_Tuples_and_Sets/Module_05_Tuple_excercise.ipynb
@@ -7,11 +7,411 @@
     "#  Module 5 Tuple Assigment: Level 1 and 2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Level 1**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create an empty tuple.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "empty_tuple = ()\n",
+    "empty_tuple\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create a tuple containing names of your sisters and your brothers (imaginary siblings are fine)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('Aisha', 'Fatima', \"Asma'u\"), ('Abdulrahman', 'Usman'))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sisters = (\"Aisha\", \"Fatima\",\"Asma'u\",)\n",
+    "brothers = (\"Abdulrahman\", \"Usman\")\n",
+    "sisters, brothers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Join brothers and sisters tuples and assign it to siblings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Abdulrahman', 'Usman', 'Aisha', 'Fatima', \"Asma'u\")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "siblings = brothers + sisters\n",
+    "siblings\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. How many siblings do you have?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(siblings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Modify the siblings tuple and add the name of your father and mother and assign it to family_members."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Abdulrahman', 'Usman', 'Aisha', 'Fatima', \"Asma'u\", 'Dad', 'Mom')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family_members = siblings + (\"Dad\", \"Mom\")\n",
+    "family_members\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Level 2**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Unpack siblings and parents from family_members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['Abdulrahman', 'Usman', 'Aisha', 'Fatima', \"Asma'u\"], 'Dad', 'Mom')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "*siblings_unpacked, Dad, Mom = family_members\n",
+    "siblings_unpacked, Dad, Mom\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create fruits, vegetables and animal products tuples. Join the three tuples and assign it to a variable called food_stuff_tp."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('apple',\n",
+       " 'banana',\n",
+       " 'mango',\n",
+       " 'carrot',\n",
+       " 'spinach',\n",
+       " 'tomato',\n",
+       " 'milk',\n",
+       " 'meat',\n",
+       " 'egg')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = (\"apple\", \"banana\", \"mango\")\n",
+    "vegetables = (\"carrot\", \"spinach\", \"tomato\")\n",
+    "animal_products = (\"milk\", \"meat\", \"egg\")\n",
+    "food_stuff_tp = fruits + vegetables + animal_products\n",
+    "food_stuff_tp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Change the about food_stuff_tp tuple to a food_stuff_lt list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple',\n",
+       " 'banana',\n",
+       " 'mango',\n",
+       " 'carrot',\n",
+       " 'spinach',\n",
+       " 'tomato',\n",
+       " 'milk',\n",
+       " 'meat',\n",
+       " 'egg']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_stuff_lt = list(food_stuff_tp)\n",
+    "food_stuff_lt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Slice out the middle item or items from the food_stuff_tp tuple or food_stuff_lt list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'spinach'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "middle_index = len(food_stuff_lt) // 2\n",
+    "food_stuff_lt[middle_index - 1 : middle_index + 1] if len(food_stuff_lt) % 2 == 0 else food_stuff_lt[middle_index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Slice out the first three items and the last three items from food_staff_lt list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'mango']\n",
+      "['milk', 'meat', 'egg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_three = food_stuff_lt[:3]\n",
+    "last_three = food_stuff_lt[-3:]\n",
+    "\n",
+    "print(first_three)\n",
+    "\n",
+    "print(last_three)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Delete the food_staff_tp tuple completely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del food_stuff_tp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Check if an item exists in tuple:\n",
+    "\n",
+    "### - Check if 'Estonia' is a nordic country\n",
+    "### - Check if 'Iceland' is a nordic country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "nordic_countries = (\"Denmark\", \"Finland\", \"Iceland\", \"Norway\", \"Sweden\")\n",
+    "\n",
+    "\"Estonia\" in nordic_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Iceland\" in nordic_countries"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
