--- a/Module_06_Dictionaries/Module_06_excercise.ipynb
+++ b/Module_06_Dictionaries/Module_06_excercise.ipynb
@@ -49,6 +49,37 @@
    "source": [
     "## 2. Add name, color, breed, legs, age to the dog dictionary."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog[\"Name\"] = \"Bingo\"\n",
+    "dog[\"color\"] = \"blue\"\n",
+    "dog[\"Breed\"] = \"African\"\n",
+    "dog[\"Legs\"] = \"White\"\n",
+    "dog[\"Age\"] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'Bingo', 'color': 'blue', 'Breed': 'African', 'Legs': 'White', 'Age': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "len(dog)\n",
+    "print(dog)"
+   ]
   }
  ],
  "metadata": {
