--- a/Module_06_Dictionaries/Module_06_excercise.ipynb
+++ b/Module_06_Dictionaries/Module_06_excercise.ipynb
@@ -80,6 +80,59 @@
     "len(dog)\n",
     "print(dog)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Create a student dictionary and add first_name, last_name, gender, age, marital status, skills, country, city and address as keys for the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student = {\n",
+    "    \"first_name\": \"Muhammad\",\n",
+    "    \"last_name\": \"Adam\",\n",
+    "    \"gender\": \"Male\",\n",
+    "    \"age\": 22,\n",
+    "    \"marital_status\": \"Single\",\n",
+    "    \"skills\": [\"Python\", \"Java\", \"SQL\"],\n",
+    "    \"country\": \"Nigeria\",\n",
+    "    \"city\": \"Jos\",\n",
+    "    \"address\": \"Jos North\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Get the length of the student dictionary.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(student)"
+   ]
   }
  ],
  "metadata": {
