--- a/Module_06_Dictionaries/Module_06_excercise.ipynb
+++ b/Module_06_Dictionaries/Module_06_excercise.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,13 +125,66 @@
        "9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(student)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Get the value of skills and check the data type, it should be a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'Java', 'SQL']\n",
+      "The data type of Skills is :  <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student[\"skills\"])\n",
+    "print(f\"The data type of Skills is :  {type(student[\"skills\"])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Modify the skills values by adding one or two skills."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'Java', 'SQL']\n",
+      "['Python', 'Java', 'SQL', 'HTML', 'CSS', 'JavaScript']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student[\"skills\"])\n",
+    "student[\"skills\"].extend([\"HTML\", \"CSS\", \"JavaScript\"])\n",
+    "print(student[\"skills\"])\n"
    ]
   }
  ],
