--- a/Module_06_Dictionaries/Module_06_excercise.ipynb
+++ b/Module_06_Dictionaries/Module_06_excercise.ipynb
@@ -176,15 +176,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Python', 'Java', 'SQL']\n",
-      "['Python', 'Java', 'SQL', 'HTML', 'CSS', 'JavaScript']\n"
+      "Initial skills: ['Python', 'Java', 'SQL']\n",
+      "Updated skills afer adding more skills: ['Python', 'Java', 'SQL', 'HTML', 'CSS', 'JavaScript']\n"
      ]
     }
    ],
    "source": [
-    "print(student[\"skills\"])\n",
+    "print(f\"Initial skills: {student[\"skills\"]}\")\n",
     "student[\"skills\"].extend([\"HTML\", \"CSS\", \"JavaScript\"])\n",
-    "print(student[\"skills\"])\n"
+    "print(f\"Updated skills afer adding more skills: {student[\"skills\"]}\")\n"
    ]
   }
  ],
