--- a/Module_06_Dictionaries/Module_06_excercise.ipynb
+++ b/Module_06_Dictionaries/Module_06_excercise.ipynb
@@ -186,6 +186,168 @@
     "student[\"skills\"].extend([\"HTML\", \"CSS\", \"JavaScript\"])\n",
     "print(f\"Updated skills afer adding more skills: {student[\"skills\"]}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Get the dictionary keys as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['first_name', 'last_name', 'gender', 'age', 'marital_status', 'skills', 'country', 'city', 'address'])\n",
+      "['first_name', 'last_name', 'gender', 'age', 'marital_status', 'skills', 'country', 'city', 'address']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys = student.keys()\n",
+    "print(keys)\n",
+    "keys_list = list(keys)\n",
+    "print(keys_list)\n",
+    "type(keys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Get the dictionary values as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['Muhammad', 'Adam', 'Male', 22, 'Single', ['Python', 'Java', 'SQL', 'HTML', 'CSS', 'JavaScript'], 'Nigeria', 'Jos', 'Jos North'])\n",
+      "['Muhammad', 'Adam', 'Male', 22, 'Single', ['Python', 'Java', 'SQL', 'HTML', 'CSS', 'JavaScript'], 'Nigeria', 'Jos', 'Jos North']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_values"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = student.values()\n",
+    "print(values)\n",
+    "values_list = list(values)\n",
+    "print(values_list)\n",
+    "type(values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Change the dictionary to a list of tuples using items() method.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_tuples = tuple(student.items())\n",
+    "type(student_tuples)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Delete one of the items in the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del student[\"skills\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Delete one of the dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'student' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(student)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'student' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(student)\n",
+    "\n",
+    "# displays error since the dictionary is deleted"
+   ]
   }
  ],
  "metadata": {
