--- a/Module_07_Conditionals/Module_07_excercise_level_1,2&3.ipynb
+++ b/Module_07_Conditionals/Module_07_excercise_level_1,2&3.ipynb
@@ -128,6 +128,125 @@
     "#  Module 7 Assigment: Level 2\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Write a code which gives grade to students according to theirs scores:\n",
+    "```python\n",
+    "80-100, A\n",
+    "70-89, B\n",
+    "60-69, C\n",
+    "50-59, D\n",
+    "0-49, F\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your score is 30 and your grade is: F\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input('Enter a grade'))\n",
+    "\n",
+    "if score >= 80 and score <= 100:\n",
+    "    print(f'Your score is {score} and your grade is: A')\n",
+    "elif score >= 70 and score <=89:\n",
+    "    print(f'Your score is {score} and your grade is: B')\n",
+    "elif score >= 60 and score <= 69:\n",
+    "    print(f'Your score is {score} and your grade is: C')\n",
+    "elif score >= 50 and score <= 59:\n",
+    "    score(f'Your score is {grade} and your grade is: D')\n",
+    "elif score >= 0 and score <=49:\n",
+    "    print(f'Your score is {score} and your grade is: F')\n",
+    "else:\n",
+    "    print('Invalid grade! enter a grade between 0 and 100') \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Check if the season is Autumn, Winter, Spring or Summer. If the user input is: September, October or November, the season is Autumn. December, January or February, the season is Winter. March, April or May, the season is Spring June, July or August, the season is Summer.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The season is Summer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "month = input(\"Enter the name of the month: \").title()  \n",
+    "\n",
+    "if month in [\"September\", \"October\", \"November\"]:\n",
+    "    print(\"The season is Autumn.\")\n",
+    "elif month in [\"December\", \"January\", \"February\"]:\n",
+    "    print(\"The season is Winter.\")\n",
+    "elif month in [\"March\", \"April\", \"May\"]:\n",
+    "    print(\"The season is Spring.\")\n",
+    "elif month in [\"June\", \"July\", \"August\"]:\n",
+    "    print(\"The season is Summer.\")\n",
+    "else:\n",
+    "    print(\"Please enter a valid month name.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. The following list contains some fruits:\n",
+    "```sh\n",
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "```\n",
+    "\n",
+    "### If a fruit doesn't exist in the list add the fruit to the list and print the modified list. If the fruit exists print('That fruit already exist in the list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fruit berry has been added to the list.\n",
+      "['banana', 'orange', 'mango', 'lemon', 'berry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "\n",
+    "fruit = input(\"Enter a fruit: \").lower()\n",
+    "\n",
+    "if fruit not in fruits:\n",
+    "    fruits.append(fruit)\n",
+    "    print(f'The fruit {fruit} has been added to the list.')\n",
+    "else:\n",
+    "    print(\"That fruit already exists in the list.\")\n",
+    "print(fruits)\n"
+   ]
   }
  ],
  "metadata": {
