--- a/Module_07_Conditionals/Module_07_excercise_level_1,2&3.ipynb
+++ b/Module_07_Conditionals/Module_07_excercise_level_1,2&3.ipynb
@@ -247,6 +247,104 @@
     "    print(\"That fruit already exists in the list.\")\n",
     "print(fruits)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 7 Assigment: Level 3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Here we have a person dictionary. Feel free to modify it!\n",
+    "### **modified list**   \n",
+    "\n",
+    "    ```\n",
+    "    *modified list*    \n",
+    "    person={\n",
+    "    'first_name': 'Muhammad',\n",
+    "    'last_name': 'Adam',\n",
+    "    'age': 22,\n",
+    "    'country': 'Nigeia',\n",
+    "    'is_marred': False,\n",
+    "    'skills': ['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+    "    'address': {'street': 'Space street','zipcode': '02210'}\n",
+    "    }\n",
+    "\n",
+    "\n",
+    " * Check if the person dictionary has skills key, if so print out the middle skill in the skills list.\n",
+    " * Check if the person dictionary has skills key, if so check if the person has 'Python' skill and print out the result.\n",
+    " * If a person skills has only JavaScript and React, print('He is a front end developer'), if the person skills has Node, Python, MongoDB, print('He is a backend developer'), if the person skills has React, Node and MongoDB, Print('He is a fullstack developer'), else print('unknown title') - for more accurate results more conditions can be nested!\n",
+    " * If the person is married and if he lives in Finland, print the information in the following format:\n",
+    "\n",
+    "Muhammad Adam lives in Nigeria. He is not married.\n",
+    "```\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skills is present in person list\n",
+      "Python is present in person skills\n",
+      "He is a frontend developer.\n",
+      "Muhammad Adam lives in Nigeia and he is not married\n"
+     ]
+    }
+   ],
+   "source": [
+    "person={\n",
+    "    'first_name': 'Muhammad',\n",
+    "    'last_name': 'Adam',\n",
+    "    'age': 22,\n",
+    "    'country': 'Nigeia',\n",
+    "    'is_married': False,\n",
+    "    'skills': ['JavaScript', 'React', 'Node', 'MongoDB', 'Python'],\n",
+    "    'address': {'street': 'Space street','zipcode': '02210'}\n",
+    "}\n",
+    "\n",
+    "if 'skills' in person:\n",
+    "    print(\"Skills is present in person list\")\n",
+    "    if 'Python' in person['skills']:\n",
+    "        print(\"Python is present in person skills\")\n",
+    "    else:\n",
+    "        print(\"Python is not present in person skills\")\n",
+    "else:\n",
+    "    print(\"Skills is not present in person list\")\n",
+    "\n",
+    "# Skills check\n",
+    "\n",
+    "if 'JavaScript' in person[\"skills\"] and 'React' in person[\"skills\"]:\n",
+    "    print(\"He is a frontend developer.\")\n",
+    "elif 'Python' in person[\"skills\"] and \"Node\" in person[\"skills\"] and \"MongoDB\" in person[\"skills\"]:\n",
+    "    print(\"He is a backend developer.\")\n",
+    "elif 'MongoDB' in person[\"skills\"] and \"Node\" in person[\"skills\"] and \"React\" in person[\"skills\"]:\n",
+    "    print(\"He is a fullstack developer.\")\n",
+    "else:\n",
+    "    print(\"Unknown Title.\")\n",
+    "\n",
+    "marital_status = \"married\" if person['is_married'] else \"not married\"\n",
+    "\n",
+    "print(f\"{person['first_name']} {person['last_name']} lives in {person[\"country\"]} and he is {marital_status}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
