--- a/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
+++ b/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
@@ -72,6 +72,391 @@
     "    print(num)\n",
     "    num += 1 "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Iterate 10 to 0 using for loop, do the same using while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for m in range(10, -1, -1):\n",
+    "    print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 10\n",
+    "while m > 0:\n",
+    "    print(m)\n",
+    "    m -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Write a loop that makes seven calls to print(), so we get on the output the following triangle:\n",
+    "```python\n",
+    "#\n",
+    "##\n",
+    "###\n",
+    "####\n",
+    "#####\n",
+    "######\n",
+    "#######\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#\n",
+      "##\n",
+      "###\n",
+      "####\n",
+      "#####\n",
+      "######\n",
+      "#######\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 1\n",
+    "while k < 8:\n",
+    "    print('#'*k)\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Use nested loops to create the following:\n",
+    "```python\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #\n",
+    "# # # # # # # #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n",
+      "# # # # # # # # \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of rows and columns\n",
+    "rows = 8\n",
+    "columns = 8\n",
+    "\n",
+    "# Outer loop for rows\n",
+    "for i in range(rows):\n",
+    "    # Inner loop for columns\n",
+    "    for j in range(columns):\n",
+    "        print(\"#\", end=\" \")  # Print # with a space\n",
+    "    print()  # Move to the next line after each row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Print the following pattern:\n",
+    "```sh\n",
+    "0 x 0 = 0\n",
+    "1 x 1 = 1\n",
+    "2 x 2 = 4\n",
+    "3 x 3 = 9\n",
+    "4 x 4 = 16\n",
+    "5 x 5 = 25\n",
+    "6 x 6 = 36\n",
+    "7 x 7 = 49\n",
+    "8 x 8 = 64\n",
+    "9 x 9 = 81\n",
+    "10 x 10 = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 x 0 = 0\n",
+      "1 x 1 = 1\n",
+      "2 x 2 = 4\n",
+      "3 x 3 = 9\n",
+      "4 x 4 = 16\n",
+      "5 x 5 = 25\n",
+      "6 x 6 = 36\n",
+      "7 x 7 = 49\n",
+      "8 x 8 = 64\n",
+      "9 x 9 = 81\n",
+      "10 x 10 = 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for q in range(11):\n",
+    "    print(f\"{q} x {q} = {q*q}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Iterate through the list, ['Python', 'Numpy','Pandas','Django', 'Flask'] using a for loop and print out the items."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "Numpy\n",
+      "Pandas\n",
+      "Django\n",
+      "Flask\n"
+     ]
+    }
+   ],
+   "source": [
+    "skills =  ['Python', 'Numpy','Pandas','Django', 'Flask']\n",
+    "for skill in skills:\n",
+    "    print(skill)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Use for loop to iterate from 0 to 100 and print only even numbers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n",
+      "52\n",
+      "54\n",
+      "56\n",
+      "58\n",
+      "60\n",
+      "62\n",
+      "64\n",
+      "66\n",
+      "68\n",
+      "70\n",
+      "72\n",
+      "74\n",
+      "76\n",
+      "78\n",
+      "80\n",
+      "82\n",
+      "84\n",
+      "86\n",
+      "88\n",
+      "90\n",
+      "92\n",
+      "94\n",
+      "96\n",
+      "98\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = range(101)\n",
+    "for i in num:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Use for loop to iterate from 0 to 100 and print only odd numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n",
+      "51\n",
+      "53\n",
+      "55\n",
+      "57\n",
+      "59\n",
+      "61\n",
+      "63\n",
+      "65\n",
+      "67\n",
+      "69\n",
+      "71\n",
+      "73\n",
+      "75\n",
+      "77\n",
+      "79\n",
+      "81\n",
+      "83\n",
+      "85\n",
+      "87\n",
+      "89\n",
+      "91\n",
+      "93\n",
+      "95\n",
+      "97\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = range(101)\n",
+    "for i in num:\n",
+    "    if i % 2!= 0:\n",
+    "        print(i)"
+   ]
   }
  ],
  "metadata": {
