--- a/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
+++ b/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
@@ -457,6 +457,99 @@
     "    if i % 2!= 0:\n",
     "        print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 8 Assigment: Level 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Use for loop to iterate from 0 to 100 and print the sum of all numbers.\n",
+    "```sh\n",
+    "The sum of all numbers is 5050.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all numbers from 0 to 100 is: 5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_sum = 0\n",
+    "\n",
+    "for i in range(101):\n",
+    "    total_sum += i\n",
+    "\n",
+    "print(\"The sum of all numbers from 0 to 100 is:\", total_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Use for loop to iterate from 0 to 100 and print the sum of all evens and the sum of all odds.\n",
+    "```sh\n",
+    "The sum of all evens is 2550. And the sum of all odds is 2500."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of all numbers from 0 to 100 is: 2550\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_sum = 0\n",
+    "\n",
+    "for number in range(101):\n",
+    "    if number % 2 == 0:\n",
+    "        total_sum += number\n",
+    "\n",
+    "print(\"The sum of all numbers from 0 to 100 is:\", total_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 8 Assigment: Level 3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Go to the data folder and use the countries.py file. Loop through the countries and extract all the countries containing the word land."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
