--- a/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
+++ b/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
@@ -546,9 +546,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Åland Islands', 'Bouvet Island', 'United States Minor Outlying Islands', 'Virgin Islands (British)', 'Virgin Islands (U.S.)', 'Cayman Islands', 'Christmas Island', 'Cocos (Keeling) Islands', 'Cook Islands', 'Falkland Islands (Malvinas)', 'Faroe Islands', 'Finland', 'Greenland', 'Heard Island and McDonald Islands', 'Iceland', 'Ireland', 'Marshall Islands', 'Netherlands', 'New Zealand', 'Norfolk Island', 'Northern Mariana Islands', 'Poland', 'Solomon Islands', 'South Georgia and the South Sandwich Islands', 'Swaziland', 'Switzerland', 'Thailand', 'Turks and Caicos Islands', 'United Kingdom of Great Britain and Northern Ireland']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from countries_data import countries_data\n",
+    "\n",
+    "# List to store countries with \"land\" in their name\n",
+    "countries_with_land = []\n",
+    "\n",
+    "# Loop through the countries data\n",
+    "for country in countries_data:\n",
+    "    if \"land\" in country[\"name\"].lower():\n",
+    "        countries_with_land.append(country[\"name\"])\n",
+    "\n",
+    "# Print the result\n",
+    "print(countries_with_land)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. This is a fruit list, ['banana', 'orange', 'mango', 'lemon'] reverse the order using loop.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lemon', 'mango', 'orange', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['banana', 'orange', 'mango', 'lemon']\n",
+    "fruits.reverse()\n",
+    "print(fruits)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Go to the data folder and use the countries_data.py file.\n",
+    "\n",
+    "+ ### What are the total number of languages in the data\n",
+    "+ ### Find the ten most spoken languages from the data\n",
+    "+ ### Find the 10 most populated countries in the world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of languages: 368\n"
+     ]
+    }
+   ],
+   "source": [
+    "languages = []\n",
+    "for country in countries_data:\n",
+    "    languages.extend(country[\"languages\"])\n",
+    "\n",
+    "total_languages = len(languages)\n",
+    "print(f\"Total number of languages: {total_languages}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Counter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m language_counts \u001b[38;5;241m=\u001b[39m Counter(languages)\n\u001b[0;32m      2\u001b[0m most_spoken_languages \u001b[38;5;241m=\u001b[39m language_counts\u001b[38;5;241m.\u001b[39mmost_common(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTen most spoken languages:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Counter' is not defined"
+     ]
+    }
+   ],
    "source": []
   }
  ],
