--- a/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
+++ b/Module_08_Loops/Module_08_excercise_level_1,2&3.ipynb
@@ -515,18 +515,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of all numbers from 0 to 100 is: 2550\n"
+      "The sum of all evens is 2550\n",
+      "The sum of all odds is 2500\n"
      ]
     }
    ],
    "source": [
-    "total_sum = 0\n",
+    "sum_evens = 0\n",
+    "sum_odds = 0\n",
     "\n",
     "for number in range(101):\n",
     "    if number % 2 == 0:\n",
-    "        total_sum += number\n",
+    "        sum_evens += number\n",
+    "    else:\n",
+    "        sum_odds += number\n",
     "\n",
-    "print(\"The sum of all numbers from 0 to 100 is:\", total_sum)"
+    "print(\"The sum of all evens is\", sum_evens)\n",
+    "print(\"The sum of all odds is\", sum_odds)"
    ]
   },
   {
@@ -546,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -611,21 +616,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of languages: 368\n"
+      "Total number of languages: 91\n"
      ]
     }
    ],
    "source": [
-    "languages = []\n",
+    "languages = set()\n",
     "for country in countries_data:\n",
-    "    languages.extend(country[\"languages\"])\n",
+    "    languages.update(country[\"languages\"])\n",
     "\n",
     "total_languages = len(languages)\n",
     "print(f\"Total number of languages: {total_languages}\")"
@@ -633,30 +638,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[27657145], [28875], [2886026], [40400000], [57100], [78014], [25868000], [13452], [1000], [86295], [43590400], [2994400], [107394], [24117360], [8725931], [9730500], [378040], [1404900], [161006790], [285000], [9498700], [11319511], [370300], [10653654], [61954], [775620], [10985059], [17408], [3531159], [2141206], [0], [206135893], [3000], [300], [28514], [114743], [411900], [7153784], [19034397], [10114505], [15626444], [22709892], [36155487], [531239], [58238], [4998000], [14497000], [18191900], [1377422166], [2072], [550], [48759958], [806153], [4741000], [85026000], [18100], [4890379], [4190669], [11239004], [154843], [847000], [10558524], [5717014], [900000], [71293], [10075045], [16545799], [91290000], [6520675], [1222442], [5352000], [1315944], [92206005], [2563], [49376], [867000], [5491817], [66710000], [254541], [271800], [140], [1802278], [1882450], [3720400], [81770900], [27670174], [33140], [10858018], [55847], [103328], [400132], [184200], [16176133], [62999], [12947000], [1547777], [746900], [11078033], [0], [451], [8576532], [7324300], [9823000], [334300], [1295210000], [258705000], [22671331], [79369900], [37883543], [6378000], [84497], [8527400], [60665551], [2723246], [126960000], [100800], [9531712], [17753200], [47251000], [113400], [4183658], [6047800], [6492400], [1961600], [5988000], [1894194], [4615000], [6385000], [37623], [2872294], [576200], [649100], [2058539], [22434363], [16832910], [31405416], [344023], [18135000], [425384], [54880], [378243], [3718678], [1262879], [226915], [122273473], [102800], [3553100], [38400], [3093100], [621810], [4922], [33337529], [26423700], [51419420], [2324388], [10084], [28431500], [17019800], [268767], [4697854], [6262703], [20715000], [186988000], [1470], [2302], [25281000], [56940], [5223256], [4420133], [194125062], [17950], [4682467], [3814672], [8083700], [6854536], [31488700], [103279800], [56], [38437239], [10374822], [3474182], [2587564], [1733842], [840974], [19861408], [146599183], [11553188], [9417], [4255], [46204], [186000], [36979], [6069], [109991], [194899], [33005], [187356], [32248200], [14799859], [7076372], [91400], [7075641], [5535000], [38247], [5426252], [2064188], [642000], [11079000], [55653654], [30], [50801405], [12131000], [46438422], [20966000], [39598700], [541638], [2562], [1132657], [9894888], [8341600], [18564000], [23503349], [8593600], [55155000], [65327652], [1167242], [7143000], [1411], [103252], [1349667], [11154400], [78741053], [4751120], [31458], [10640], [33860700], [42692393], [9856000], [65110000], [323947000], [3480222], [31576400], [277500], [31028700], [92700000], [11750], [510713], [27478000], [15933883], [14240168]]\n",
-      "[1377422166]\n"
+      "\n",
+      "Ten most spoken languages:\n",
+      "[('English', 91), ('French', 45), ('Arabic', 25), ('Spanish', 24), ('Portuguese', 21), ('Russian', 16), ('German', 13), ('Chinese', 12), ('Swahili', 11), ('Italian', 9)]\n"
      ]
     }
    ],
    "source": [
-    "# popu = []\n",
-    "# for p in countries_data:\n",
-    "#     popu.extend(p[\"population\"])\n",
-    "# print(popu)\n",
-    "popp = []\n",
-    "for p in countries_data:\n",
-    "    pop = [p[\"population\"]]\n",
-    "    popp.append(pop)\n",
-    "print(popp)\n",
-    "print(max(popp))\n",
-    "    \n"
+    "from collections import Counter\n",
+    "\n",
+    "language_counter = Counter()\n",
+    "for country in countries_data:\n",
+    "    language_counter.update(country[\"languages\"])\n",
+    "\n",
+    "most_spoken_languages = language_counter.most_common(10)\n",
+    "print(\"\\nTen most spoken languages:\")\n",
+    "print(most_spoken_languages)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ten most populated countries:\n",
+      "[{'name': 'China', 'population': 1444216107}, {'name': 'India', 'population': 1393409038}, {'name': 'United States', 'population': 332915073}, {'name': 'Indonesia', 'population': 276361783}, {'name': 'Pakistan', 'population': 225199937}, {'name': 'Brazil', 'population': 213993437}, {'name': 'Nigeria', 'population': 211400708}, {'name': 'Bangladesh', 'population': 166303498}, {'name': 'Russia', 'population': 145912025}, {'name': 'Mexico', 'population': 130262216}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "most_populated_countries = sorted(countries_data, key=lambda x: x['population'], reverse=True)[:10]\n",
+    "print(\"\\nTen most populated countries:\")\n",
+    "print(most_populated_countries)\n"
    ]
   }
  ],
