--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -490,7 +490,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 1. Declare a function named evens_and_odds . It takes a positive integer as parameter and it counts number of evens and odds in the number.\n",
+    "```py\n",
+    "    print(evens_and_odds(100))\n",
+    "    # The number of odds are 50.\n",
+    "    # The number of evens are 51."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of odds are 50\n",
+      "The number of evens are 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evens_and_odds(number):\n",
+    "    evens = []\n",
+    "    odd = []\n",
+    "    for i in range(1, number + 1):\n",
+    "        if i % 2 == 0:\n",
+    "            evens.append(i)\n",
+    "        else:\n",
+    "            odd.append(i)\n",
+    "    return evens, odd\n",
+    "\n",
+    "evens, odd = evens_and_odds(100)\n",
+    "\n",
+    "print(f\"The number of odds are {len(odd)}\")\n",
+    "print(f\"The number of evens are {len(evens)}\")\n"
+   ]
   }
  ],
  "metadata": {
