--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -528,6 +528,82 @@
     "print(f\"The number of odds are {len(odd)}\")\n",
     "print(f\"The number of evens are {len(evens)}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Call your function factorial, it takes a whole number as a parameter and it return a factorial of the number.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(number):\n",
+    "    if number < 0:\n",
+    "        return \"Factorial is not defined for negative numbers.\"\n",
+    "    elif number == 0 or number == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for i in range(2, number + 1):\n",
+    "            result *= i\n",
+    "        return result\n",
+    "\n",
+    "num = 5\n",
+    "print(f\"The factorial of {num} is {factorial(num)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Call your function is_empty, it takes a parameter and it checks if it is empty or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_empty(param):\n",
+    "    return not bool(param)\n",
+    "\n",
+    "# Example usage\n",
+    "print(is_empty(\"\"))         # True (Empty string)\n",
+    "print(is_empty([]))         # True (Empty list)\n",
+    "print(is_empty({}))         # True (Empty dictionary)\n",
+    "print(is_empty(0))          # True (0 is considered \"empty\")\n",
+    "print(is_empty(None))       # True (None is empty)\n",
+    "print(is_empty(\"Hello\"))    # False (Non-empty string)\n",
+    "print(is_empty([1, 2, 3]))  # False (\n"
+   ]
   }
  ],
  "metadata": {
