--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -604,6 +604,109 @@
     "print(is_empty(\"Hello\"))    # False (Non-empty string)\n",
     "print(is_empty([1, 2, 3]))  # False (\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Write different functions which take lists. They should calculate_mean, calculate_median, calculate_mode, calculate_range, calculate_variance, calculate_std (standard deviation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 2.4\n",
+      "Median: 2\n",
+      "Mode: [2]\n",
+      "Range: 3\n",
+      "Variance: 1.04\n",
+      "Standard Deviation: 1.019803902718557\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import math\n",
+    "\n",
+    "# Function to calculate the mean\n",
+    "def calculate_mean(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    return sum(data) / len(data)\n",
+    "\n",
+    "# Function to calculate the median\n",
+    "def calculate_median(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    sorted_data = sorted(data)\n",
+    "    n = len(sorted_data)\n",
+    "    mid = n // 2\n",
+    "    if n % 2 == 0:\n",
+    "        return (sorted_data[mid - 1] + sorted_data[mid]) / 2\n",
+    "    else:\n",
+    "        return sorted_data[mid]\n",
+    "\n",
+    "# Function to calculate the mode\n",
+    "def calculate_mode(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    counter = Counter(data)\n",
+    "    max_count = max(counter.values())\n",
+    "    modes = [key for key, count in counter.items() if count == max_count]\n",
+    "    if len(modes) == len(data):\n",
+    "        raise ValueError(\"No mode found (all values are unique)\")\n",
+    "    return modes\n",
+    "\n",
+    "# Function to calculate the range\n",
+    "def calculate_range(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    return max(data) - min(data)\n",
+    "\n",
+    "# Function to calculate the variance\n",
+    "def calculate_variance(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    mean = calculate_mean(data)\n",
+    "    return sum((x - mean) ** 2 for x in data) / len(data)\n",
+    "\n",
+    "# Function to calculate the standard deviation\n",
+    "def calculate_std(data):\n",
+    "    if not data:\n",
+    "        raise ValueError(\"The list is empty\")\n",
+    "    variance = calculate_variance(data)\n",
+    "    return math.sqrt(variance)\n",
+    "\n",
+    "# Example usage\n",
+    "data = [1, 2, 2, 3, 4]\n",
+    "\n",
+    "print(\"Mean:\", calculate_mean(data))\n",
+    "print(\"Median:\", calculate_median(data))\n",
+    "print(\"Mode:\", calculate_mode(data))\n",
+    "print(\"Range:\", calculate_range(data))\n",
+    "print(\"Variance:\", calculate_variance(data))\n",
+    "print(\"Standard Deviation:\", calculate_std(data))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 9 Assigment: Level 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
