--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -702,11 +702,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 1. Write a function called is_prime, which checks if a number is prime.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    # Numbers less than 2 are not prime\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    \n",
+    "    # Check for divisors from 2 to the square root of n\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "print(is_prime(2)) \n",
+    "print(is_prime(15)) \n",
+    "print(is_prime(17)) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Write a functions which checks if all items are unique in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def all_unique(lst):\n",
+    "    return len(lst) == len(set(lst))\n",
+    "\n",
+    "print(all_unique([1, 2, 3, 4]))  \n",
+    "print(all_unique([1, 2, 2, 4]))  \n"
+   ]
   }
  ],
  "metadata": {
