--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -769,6 +769,107 @@
     "print(all_unique([1, 2, 3, 4]))  \n",
     "print(all_unique([1, 2, 2, 4]))  \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Write a function which checks if all the items of the list are of the same data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def same_type(lst):\n",
+    "    if not lst: \n",
+    "        return True \n",
+    "    first_type = type(lst[0])  \n",
+    "    for item in lst:\n",
+    "        if type(item) != first_type:  \n",
+    "            return False\n",
+    "    return True  \n",
+    "# Test cases\n",
+    "print(same_type([1, 2, 3, 4, \"age\"]))  \n",
+    "print(same_type([1, 2, 2, 4]))         \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Write a function which check if provided variable is a valid python variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keyword\n",
+    "import re\n",
+    "\n",
+    "def is_valid_variable_name(variable_name):\n",
+    "    \"\"\"\n",
+    "    Check if the provided variable_name is a valid Python variable name.\n",
+    "    \n",
+    "    :param variable_name: str, the variable name to check\n",
+    "    :return: bool, True if valid, False otherwise\n",
+    "    \"\"\"\n",
+    "    # Variable names must be a string\n",
+    "    if not isinstance(variable_name, str):\n",
+    "        return False\n",
+    "    \n",
+    "    # Check if it is a Python keyword\n",
+    "    if keyword.iskeyword(variable_name):\n",
+    "        return False\n",
+    "    \n",
+    "    # Regular expression for valid Python identifiers\n",
+    "    if re.match(r'^[a-zA-Z_]\\w*$', variable_name):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Test cases\n",
+    "print(is_valid_variable_name(\"my_var\"))     # True\n",
+    "print(is_valid_variable_name(\"2variable\"))  # False\n",
+    "print(is_valid_variable_name(\"_valid_var\")) # True\n",
+    "print(is_valid_variable_name(\"class\"))      # False (keyword)\n",
+    "print(is_valid_variable_name(\"valid123\"))   # True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Go to the data folder and access the countries-data.py file.\n",
+    "   - ## Create a function called the most_spoken_languages in the world. It should return 10 or 20 most spoken languages in the world in descending order\n",
+    "   - ## Create a function called the most_populated_countries. It should return 10 or 20 most populated countries in descending order."
+   ]
   }
  ],
  "metadata": {
