--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -934,6 +934,62 @@
     "for language, count in top_10_languages:\n",
     "    print(f\"{language}: {count} countries\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 most populated countries:\n",
+      "China: 1377422166 population\n",
+      "India: 1295210000 population\n",
+      "United States of America: 323947000 population\n",
+      "Indonesia: 258705000 population\n",
+      "Brazil: 206135893 population\n",
+      "Pakistan: 194125062 population\n",
+      "Nigeria: 186988000 population\n",
+      "Bangladesh: 161006790 population\n",
+      "Russian Federation: 146599183 population\n",
+      "Japan: 126960000 population\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_populated_countries(countries_data, n=10):\n",
+    "    \"\"\"\n",
+    "    Returns the most populated countries in descending order.\n",
+    "    \n",
+    "    Args:\n",
+    "        countries_data (list): A list of dictionaries where each dictionary contains country data,\n",
+    "                               including a \"name\" key for country name and a \"population\" key for population size.\n",
+    "        n (int): The number of top populated countries to return (default is 10).\n",
+    "    \n",
+    "    Returns:\n",
+    "        list: A list of dictionaries representing the most populated countries.\n",
+    "    \"\"\"\n",
+    "    # Sort the countries by population in descending order\n",
+    "    sorted_countries = sorted(countries_data, key=lambda x: x[\"population\"], reverse=True)\n",
+    "    \n",
+    "    return sorted_countries[:n]\n",
+    "\n",
+    "# Example usage:\n",
+    "# Assuming countries_data is already defined or imported\n",
+    "top_populated_countries = most_populated_countries(countries_data, 10)\n",
+    "print(\"Top 10 most populated countries:\")\n",
+    "for country in top_populated_countries:\n",
+    "    print(f\"{country['name']}: {country['population']} population\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
