--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -1188,11 +1188,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 7. Write a lambda function which can solve a slope or y-intercept of linear functions.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y-intercept: -0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_intercept = lambda x, y, m: y - m * x\n",
+    "\n",
+    "b = y_intercept(1, 2, 2.67)  \n",
+    "print(f\"Y-intercept: {b:.2f}\") \n"
+   ]
   }
  ],
  "metadata": {
