--- a/Module_16_Classes_and_objects/Module_16_excercise_level_1&2.ipynb
+++ b/Module_16_Classes_and_objects/Module_16_excercise_level_1&2.ipynb
@@ -170,6 +170,80 @@
     "# Display describe output\n",
     "print('\\n' + data.describe())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Module 16 Assigment: Level 2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create a class called PersonAccount. It has firstname, lastname, incomes, expenses properties and it has total_income, total_expense, account_info, add_income, add_expense and account_balance methods. Incomes is a set of incomes and its description. The same goes for expenses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Full Name': 'Auwal Mustapha', 'Total Income': 6500, 'Total Expense': 2500, 'Account Balance': 4000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PersonAccount:\n",
+    "    def __init__(self, firstname, lastname):\n",
+    "        self.firstname = firstname\n",
+    "        self.lastname = lastname\n",
+    "        self.incomes = []  # List of tuples (description, amount)\n",
+    "        self.expenses = []  # List of tuples (description, amount)\n",
+    "\n",
+    "    def total_income(self):\n",
+    "        return sum(amount for _, amount in self.incomes)\n",
+    "\n",
+    "    def total_expense(self):\n",
+    "        return sum(amount for _, amount in self.expenses)\n",
+    "\n",
+    "    def account_balance(self):\n",
+    "        return self.total_income() - self.total_expense()\n",
+    "\n",
+    "    def account_info(self):\n",
+    "        return {\n",
+    "            \"Full Name\": f\"{self.firstname} {self.lastname}\",\n",
+    "            \"Total Income\": self.total_income(),\n",
+    "            \"Total Expense\": self.total_expense(),\n",
+    "            \"Account Balance\": self.account_balance(),\n",
+    "        }\n",
+    "\n",
+    "    def add_income(self, description, amount):\n",
+    "        self.incomes.append((description, amount))\n",
+    "\n",
+    "    def add_expense(self, description, amount):\n",
+    "        self.expenses.append((description, amount))\n",
+    "\n",
+    "\n",
+    "\n",
+    "account = PersonAccount(\"Auwal\", \"Mustapha\")\n",
+    "\n",
+    "account.add_income(\"Salary\", 5000)\n",
+    "account.add_income(\"Freelance\", 1500)\n",
+    "\n",
+    "account.add_expense(\"Rent\", 2000)\n",
+    "account.add_expense(\"Groceries\", 500)\n",
+    "\n",
+    "\n",
+    "print(account.account_info())\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
